This changelog documents the evolution of org-re-reveal starting with
version [[*\[1.1.11\] - 2019-08-19][1.1.11]], created on 2019-08-19,
based on [[https://keepachangelog.com/en/1.0.0/][Keep a Changelog]].
Version numbers starting with version 2.0.0 adhere to
[[https://semver.org/spec/v2.0.0.html][Semantic Versioning]].

Older changes are summarized in subsequent sections.

** [Unreleased]

** [3.7.0] - 2021-01-18
*** Added
    - Allow to specify full paths for custom themes with
      ~REVEAL_THEME~ and ~org-re-reveal-theme~, with test case.  See
      MR !32.

** [3.6.0] - 2021-01-11
*** Added
    - File specifications for plugins can now be remote URLs in
      ~org-re-reveal-plugin-config~ and in ~REVEAL_ADD_PLUGIN~

** [3.5.0] - 2020-12-31
*** Added
    - Define footers per slide with property ~REVEAL_SLIDE_FOOTER~
*** Fixed
    - Issue #41

** [3.4.3] - 2020-11-14
*** Fixed
    - Issue #55

** [3.4.2] - 2020-10-18
*** Fixed
    - Revert to version 3.4.0.  Defer only worked locally, not remotely.

** [3.4.1] - 2020-10-18
*** Fixed
    - Add ~defer~ attribute in ~org-re-reveal--klipsify-script~ to
      enable klipse only after page has been loaded

** [3.4.0] - 2020-10-14
*** Added
    - Keyword ~REVEAL_ADD_PLUGIN~ to activate external plugins

** [3.3.0] - 2020-10-01
*** Added
    - Variable ~org-re-reveal-title-slide-notes~ to support speaker
      notes on title slide
    - Variable ~org-re-reveal-notes-format-string~ to make previously
      hard-coded string customizable

** [3.2.2] - 2020-09-22
*** Fixed
    - Also set ~org-html-container-element~ to "div" upon publication
      in ~org-re-reveal-publish-to-reveal~
      (and not only upon export in ~org-re-reveal-export-to-html~)

** [3.2.1] - 2020-09-19
*** Fixed
    - Allow fragment indices and HTML attributes on quote blocks, see
      [[https://gitlab.com/oer/org-re-reveal/-/merge_requests/30][MR !30]]
    - Allow classes added via ~:attr_html~ and the classes for