@@ -12,6 +12,9 @@ Version numbers starting with version 2.0.0 adhere to
 Older changes are summarized in subsequent sections.
 
 ** [Unreleased]
+*** Added
+    - Point users to customization by aborting in case of remote
+      reveal.js location in combination with version guessing.
 
 ** [3.7.0] - 2021-01-18
 *** Added
